# SameGamePlus

./: CMakeLists.txt  README.md  game_backend.cpp  game_backend.h  game_board.cpp  game_board.h  game_board_test.cpp  main.cpp  qml.qrc
common/: boom_block.cpp  boom_block.h
level_loader/: ilevel_loader.h  level_loader.cpp  level_loader.h
resources/: BoomBlock.qml  OptionsScreen.qml  PlayableScreen.qml  ScoreboardsScreen.qml  WinDialog.qml  WinDialogWithInput.qml  main.qml
resources/levels/: concentrating.txt  cross.txt
scoreboard/: iscoreboard.h  scoreboard.cpp  scoreboard.h  scoreboard_factory.h  scores_context.cpp  scores_context.h  scores_sorting.cpp  scores_sorting.h  scores_sorting_test.cpp
